src/objects/PPITableLine__c.object
<CustomObject>
    <description>Represents a bucket in the Poverty Table. Used to convert raw score in to a probability</description>
    <fields>
        <fullName>From__c</fullName>
        <description>Scoring range start score</description>
        <label>From</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PpiTable__c</fullName>
        <description>The PPI Table that the line is for</description>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PPI Table</label>
        <referenceTo>PPITable__c</referenceTo>
        <relationshipLabel>PPI Table</relationshipLabel>
        <relationshipName>PPI_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PPITableDataSet__c</fullName>
        <description>Field is deprecated. Use PpiTable__c instead. Set to null in all future PPITableLine records. Leaving existing values to allow for backwards compatibility</description>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PPI Table Data Set</label>
        <referenceTo>PPITableDataSet__c</referenceTo>
        <relationshipLabel>PPI Table Lines</relationshipLabel>
        <relationshipName>PPI_Table_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <description>Probability of being below the poverty line for the specified scoring range</description>
        <label>Probability</label>
        <precision>4</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RemoteId__c</fullName>
        <description>The Id of PPI Table Line as it is in the org that the table was downloaded from</description>
        <externalId>true</externalId>
        <label>Remote Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyLibrary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Survey Library that the PPI Table was downloaded from</description>
        <label>Remote Library</label>
        <referenceTo>SurveyLibrary__c</referenceTo>
        <relationshipLabel>PPI Table Line</relationshipLabel>
        <relationshipName>PPI_Table_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <description>Scoring range finish score</description>
        <label>To</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PPI Table Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PPIL-{00000000}</displayFormat>
        <label>PPI Table Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PPI Table Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>